[gd_scene load_steps=21 format=3 uid="uid://bttjcrebu3alf"]

[ext_resource type="Script" uid="uid://d34oc6jdwvdk" path="res://scenes/user_interface/user_interface.gd" id="1_2dtu1"]
[ext_resource type="Texture2D" uid="uid://bqykn03jbsgur" path="res://assets/UIAssets/Unitframe/HealthBarUnder.png" id="1_e2uov"]
[ext_resource type="Texture2D" uid="uid://8ckbtt0hjkxw" path="res://assets/UIAssets/Unitframe/HealthBarOver.png" id="2_cj8yd"]
[ext_resource type="FontFile" uid="uid://bri3xj4q5wgj3" path="res://assets/fonts/LibreCaslonText-Bold.ttf" id="3_cj8yd"]
[ext_resource type="Texture2D" uid="uid://dndfm8ntksu85" path="res://assets/UIAssets/Unitframe/MainBar.png" id="3_f1hci"]
[ext_resource type="Texture2D" uid="uid://b3kijdorv2mga" path="res://assets/UIAssets/Unitframe/BlueBar.png" id="4_pvt6f"]
[ext_resource type="PackedScene" uid="uid://bq4pemy56h3uj" path="res://scenes/user_interface/inventory.tscn" id="7_6xuti"]
[ext_resource type="PackedScene" uid="uid://cknr4gge4xhru" path="res://scenes/user_interface/loot_container_display.tscn" id="8_flq3v"]
[ext_resource type="PackedScene" uid="uid://c5473qjxdmblg" path="res://scenes/user_interface/quest_log.tscn" id="9_8wifb"]
[ext_resource type="PackedScene" uid="uid://b0d4rhb6r2gu" path="res://scenes/user_interface/shop_panel.tscn" id="10_axgoa"]
[ext_resource type="PackedScene" uid="uid://dbg7bh4jaggds" path="res://scenes/user_interface/simpe_pause_menu.tscn" id="11_tfswy"]
[ext_resource type="PackedScene" uid="uid://bmmmy51gtijpg" path="res://scenes/user_interface/controller_cursor.tscn" id="12_g6pv1"]

[sub_resource type="LabelSettings" id="LabelSettings_pvt6f"]
font = ExtResource("3_cj8yd")
font_size = 22
font_color = Color(0.960784, 0.717647, 0.423529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2dtu1"]
font = ExtResource("3_cj8yd")
font_size = 36
font_color = Color(0.960784, 0.717647, 0.423529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6xuti"]
font = ExtResource("3_cj8yd")
font_size = 24
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6xuti"]
color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_flq3v"]
font = ExtResource("3_cj8yd")
font_size = 36
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_flq3v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/InteractContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/InteractContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6xuti"]
resource_name = "fade_out_text"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/InteractContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/InteractContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wifb"]
_data = {
&"RESET": SubResource("Animation_flq3v"),
&"fade_out_text": SubResource("Animation_6xuti")
}

[node name="UserInterface" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2dtu1")

[node name="HUD" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="InfoBar" type="Control" parent="HUD"]
layout_mode = 2
mouse_filter = 2

[node name="HealthBarUnder" type="TextureRect" parent="HUD/InfoBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_e2uov")

[node name="HealthBar" type="TextureProgressBar" parent="HUD/InfoBar/HealthBarUnder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_progress = ExtResource("3_f1hci")

[node name="HealthLabel" type="Label" parent="HUD/InfoBar/HealthBarUnder/HealthBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(97, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 93.0
offset_top = -16.0
offset_right = 224.0
offset_bottom = -16.0
grow_vertical = 2
text = "999 / 1000"
label_settings = SubResource("LabelSettings_pvt6f")
vertical_alignment = 1

[node name="XPBar" type="TextureProgressBar" parent="HUD/InfoBar/HealthBarUnder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_progress = ExtResource("4_pvt6f")

[node name="HealthBarOver" type="TextureRect" parent="HUD/InfoBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_cj8yd")

[node name="LevelLabel" type="Label" parent="HUD/InfoBar/HealthBarOver"]
unique_name_in_owner = true
custom_minimum_size = Vector2(97, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 97.0
offset_bottom = -1.0
grow_vertical = 2
text = "99"
label_settings = SubResource("LabelSettings_2dtu1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractContainer" type="VBoxContainer" parent="HUD"]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="InteractButton" type="Label" parent="HUD/InteractContainer"]
layout_mode = 2
text = "press e"
label_settings = SubResource("LabelSettings_6xuti")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="HUD/InteractContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_6xuti")

[node name="InteractText" type="Label" parent="HUD/InteractContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open chest"
label_settings = SubResource("LabelSettings_flq3v")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Inventory" parent="." instance=ExtResource("7_6xuti")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8wifb")
}
autoplay = "RESET"

[node name="LootContainerDisplay" parent="." node_paths=PackedStringArray("inventory") instance=ExtResource("8_flq3v")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -227.5
offset_right = 264.0
offset_bottom = 227.5
inventory = NodePath("../Inventory")

[node name="QuestLog" parent="." instance=ExtResource("9_8wifb")]
visible = false
layout_mode = 1
mouse_filter = 0

[node name="ShopPanel" parent="." node_paths=PackedStringArray("inventory") instance=ExtResource("10_axgoa")]
visible = false
layout_mode = 1
inventory = NodePath("../Inventory")

[node name="SimplePauseMenu" parent="." instance=ExtResource("11_tfswy")]

[node name="ControllerCursor" parent="." instance=ExtResource("12_g6pv1")]
